--- a/pages/Games.html
+++ b/pages/Games.html
@@ -12,9 +12,9 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="scaryMovies.html">Scary Movies</a></li>
-                <li><a href="recipes.html">Recipes</a></li>
-                <li><a href="hauntedPlaces.html">Hauntings</a></li>
+                <li><a href="ScaryMovies.html">Scary Movies</a></li>
+                <li><a href="Recipes.html">Recipes</a></li>
+                <li><a href="HauntedPlaces.html">Hauntings</a></li>
             </ul>
         </nav>
     </header>
