--- a/pages/HauntedPlaces.html
+++ b/pages/HauntedPlaces.html
@@ -54,9 +54,9 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="scaryMovies.html">Scary Movies</a></li>
-                <li><a href="recipes.html">Recipes</a></li>
-                <li><a href="games.html">Games</a></li>
+                <li><a href="ScaryMovies.html">Scary Movies</a></li>
+                <li><a href="Recipes.html">Recipes</a></li>
+                <li><a href="Games.html">Games</a></li>
                 
             </ul>
         </nav>
