--- a/pages/Recipes.html
+++ b/pages/Recipes.html
@@ -21,9 +21,9 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="scaryMovies.html">Scary Movies</a></li>
-                <li><a href="games.html">Games</a></li>
-                <li><a href="hauntedPlaces.html">Hauntings</a></li>
+                <li><a href="ScaryMovies.html">Scary Movies</a></li>
+                <li><a href="Games.html">Games</a></li>
+                <li><a href="HauntedPlaces.html">Hauntings</a></li>
             </ul>
         </nav>
     </header>
