--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="pages/ScaryMovies.html">Scary Movies</a></li>
-                <li><a href="pages/recipes.html">Recipes</a></li>
-                <li><a href="pages/games.html">Games</a></li>
-                <li><a href="pages/hauntedPlaces.html">Hauntings</a></li>
+                <li><a href="pages/Recipes.html">Recipes</a></li>
+                <li><a href="pages/Games.html">Games</a></li>
+                <li><a href="pages/HauntedPlaces.html">Hauntings</a></li>
             </ul>
         </nav>
     </header>
