Pages names updated

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="pages/ScaryMovies.html">Scary Movies</a></li>
-                <li><a href="pages/Recipes.html">Recipes</a></li>
-                <li><a href="pages/Games.html">Games</a></li>
-                <li><a href="pages/HauntedPlaces.html">Hauntings</a></li>
+                <li><a href="pages/scaryMovies.html">Scary Movies</a></li>
+                <li><a href="pages/recipes.html">Recipes</a></li>
+                <li><a href="pages/games.html">Games</a></li>
+                <li><a href="pages/hauntedPlaces.html">Hauntings</a></li>
             </ul>
         </nav>
     </header>
