--- a/pages/scarymovies.html
+++ b/pages/scarymovies.html
@@ -17,9 +17,10 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>  
-                <li><a href="Recipes.html">Recipes</a></li>
-                <li><a href="Games.html">Games</a></li>
-                <li><a href="HauntedPlaces.html">Hauntings</a></li>
+                <li><a href="scaryMovies.html">Scary Movies</a></li>
+                <li><a href="recipes.html">Recipes</a></li>
+                <li><a href="games.html">Games</a></li>
+                <li><a href="hauntedPlaces.html">Hauntings</a></li>
             </ul>
         </nav>
     </header>
